public/defaults.css
:root {
  --sans: 'Helvetica Neue', 'Arial Nova', Helvetica, Arial, sans-serif;
  --serif: 'Georgia', 'Times New Roman', serif;
  --mono: Consolas, Menlo, Monaco, monospace;
}

body {
  font: 1.2rem/1.8 var(--serif);
  padding: 2rem 0 8em 0;
}

h2, h3, h4 {
  font-family: var(--sans);
  margin-top: 2em;
}

:focus {
  outline-color: blue;
}

.container img {
  max-width: 100%;
}

.container img[width][height] {
  height: auto;
}

code {
  font-size: 1.1rem;
  font-family: var(--mono);
  background-color: ghostwhite;
  padding: 0.25rem;
  white-space: nowrap;
}

.container > pre {
  margin: 2rem -1rem;
  width: 100%;
}

pre {
  margin: 2rem 0;
  border-radius: 0.25rem;
  padding: 1rem;
  background: ghostwhite;
  overflow-x: auto;
}

pre code {
  padding: 0;
  white-space: inherit;
}

pre, pre code {
  line-height: 1.5rem;
  font-size: 1rem;
}

pre mark {
  position: relative;
  background: transparent;
  font-weight: bold;
}

pre mark:before {
  position: absolute;
  content: " ";
  left: -1rem;
  box-shadow: inset 4px 0 blue;
  height: 1.6em;
}

details {
  border-left: solid 4px whitesmoke;
  padding-left: 2rem;
}

.cover {
  height: 300px;
  margin-top: 1rem;
  background-size: cover;
  background-position: center;
}

.title {
  margin-bottom: 0.5rem;
  line-height: 1.2em;
  font-size: 2.3rem;
}

.container {
  max-width: 700px;
  margin: 0 auto;
  padding: 0 1rem;
}

.post-header {
  font-family: var(--sans);
}

.post-footer {
  margin-top: 4rem;
  text-align: center;
}

a.icon {
  font-size: 2rem;
  height: 1.2em;
  width: 1.2em;
  line-height: 1.2em;
  text-align: center;
  display: inline-block;
  background: blue;
  color: white;
  font-weight: bold;
  font-family: var(--sans);
  text-decoration: none;
}

/* Comes before the title, don't mess up SEO. */
.icon:before {
  content: "D";
}

.permalink {
  float: left;
  color: lightgray;
  padding-right: 0.5em;
  margin-left: -1em;
  text-decoration: none;
  opacity: 0;
  user-select: none;
}

:hover > .permalink {
  opacity: 1;
}

a.center {
  display: flex;
  align-items: center;
  gap: 0.5em;
}

.token.comment { color: darkgrey; }
.token.keyword { color: blue; }
.token.number { color: blue; }
.token.attr-value { color: blue; }
.token.attr-equals { color: black; }
.token.tag .punctuation { color: blue; }

/* Posts list */
.post-list-item {
  text-decoration: none;
  display: flex;
  gap: 0.5em;
}

.post-list-item time {
  text-align: right;
  color: gray;
}

.post-list-item span {
  text-decoration: underline;
}

